[package]
name = "bforge"
version = "0.0.1"
edition = "2024"

description = "A decentralized source-code installer that maps files from remote git repositories into your project structure."
license = "MIT"
repository = "https://github.com/amirmo76/bforge"

[dependencies]
clap = "4.5.53"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
