[package]
name = "bforge"
version = "0.1.0"
edition = "2024"

description = "A decentralized source-code installer that maps files from remote git repositories into your project structure."
license = "MIT"
repository = "https://github.com/amirmo76/bforge"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
git2 = { version = "0.20.3", features = ["ssh"] }
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tempfile = "3.24.0"
